# predictive-maintenance-pytorch

./: .gitignore  Predictive.ipynb  README.md  best_predictive_model.pth  pyproject.toml
