[project]
name = "predictive-maintenance"
version = "0.1.0"
description = "Notebook-first predictive maintenance classification with PyTorch and Optuna"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "torch",
    "scikit-learn",
    "imbalanced-learn",
    "optuna",
    "plotly",
    "torchinfo",
]

[project.optional-dependencies]
data = [
    "kagglehub[pandas-datasets]",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
